fix: z-index for scrolling

--- a/app/stylus/controls.styl
+++ b/app/stylus/controls.styl
@@ -92,7 +92,7 @@ textarea:focus, select:focus
     line-height 0!important
     text-align center
     opacity .8
-    z-index 10
+    z-index 9
     &:hover, &:active
       opacity 1
       color #222
